[project]
name = "bucho"
version = "0.1.3"
description = "`bucho` is a package for exercises."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license.text = "PSFL"
keywords = [
    "practice",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Python Software Foundation License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[[project.authors]]
name = "AE35"
email = "alpha.echo.35@gmail.com"

[project.scripts]
bucho = "bucho.command:console"

[project.entry-points."paste.app_factory"]
main = "bucho.wsgi:app_factory"

[project.entry-points."bucho.commands"]
sample = "bucho.plugins:sample"

[project.urls]
Homepage = "https://github.com/shimizukawa/bucho/"
Changelog = "https://github.com/shimizukawa/bucho/blob/main/HISTORY.md"

[tool.pytest.ini_options]
testpaths = ["tests.py"]
python_files = ["tests.py"]
